// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`不显示标签条底部线条 1`] = `
<div
  className="sinoui-tab-group"
>
  <div
    className="sc-bdVaJa bYtejr sinoui-tab-header"
    role="tablist"
  >
    <div
      className="sc-ifAKCX kZrSXT sinoui-tab-list"
    >
      <div
        aria-selected={true}
        className="sc-gzVnrw gtremN sinoui-tab sinoui-tab--active"
        data-testid="tab-header-item-0"
        id="tab-48"
        onClick={[Function]}
        onKeyDown={[Function]}
        role="tab"
        tabIndex={0}
      >
        标签页1
      </div>
      <div
        aria-selected={false}
        className="sc-gzVnrw iKcqnw sinoui-tab"
        data-testid="tab-header-item-1"
        id="tab-49"
        onClick={[Function]}
        onKeyDown={[Function]}
        role="tab"
        tabIndex={-1}
      >
        标签页2
      </div>
      <div
        aria-selected={false}
        className="sc-gzVnrw iKcqnw sinoui-tab"
        data-testid="tab-header-item-2"
        id="tab-50"
        onClick={[Function]}
        onKeyDown={[Function]}
        role="tab"
        tabIndex={-1}
      >
        标签页3
      </div>
      <div
        className="sc-bwzfXH fmPQiX sinoui-ink-bar"
        data-testid="inkbar"
      />
    </div>
  </div>
  <div
    className="sc-EHOje cDIvNs sinoui-tab-content"
  >
    <div
      className="sc-bZQynM jWIhci sinoui-tab-panel-list"
      style={
        Object {
          "transform": "translate3d(-0%, 0px, 0px)",
        }
      }
    >
      <div
        aria-hidden={false}
        className="sc-htoDjs ahPlL sinoui-tab-panel sinoui-tab-panel--active"
        data-testid="tab-panel-0"
        hidden={false}
        id="tab-51"
        role="tabpanel"
      >
        内容1
      </div>
      <div
        aria-hidden={true}
        className="sc-htoDjs fSyAZh sinoui-tab-panel"
        data-testid="tab-panel-1"
        hidden={true}
        id="tab-52"
        role="tabpanel"
      />
      <div
        aria-hidden={true}
        className="sc-htoDjs fSyAZh sinoui-tab-panel"
        data-testid="tab-panel-2"
        hidden={true}
        id="tab-53"
        role="tabpanel"
      />
    </div>
  </div>
</div>
`;

exports[`正确渲染TabGroup 1`] = `
<div
  className="sinoui-tab-group"
>
  <div
    className="sc-bdVaJa bHJEOW sinoui-tab-header"
    role="tablist"
  >
    <div
      className="sc-ifAKCX kZrSXT sinoui-tab-list"
    >
      <div
        aria-selected={true}
        className="sc-gzVnrw gtremN sinoui-tab sinoui-tab--active"
        data-testid="tab-header-item-0"
        id="tab-0"
        onClick={[Function]}
        onKeyDown={[Function]}
        role="tab"
        tabIndex={0}
      >
        标签页1
      </div>
      <div
        aria-selected={false}
        className="sc-gzVnrw iKcqnw sinoui-tab"
        data-testid="tab-header-item-1"
        id="tab-1"
        onClick={[Function]}
        onKeyDown={[Function]}
        role="tab"
        tabIndex={-1}
      >
        标签页2
      </div>
      <div
        aria-selected={false}
        className="sc-gzVnrw iKcqnw sinoui-tab"
        data-testid="tab-header-item-2"
        id="tab-2"
        onClick={[Function]}
        onKeyDown={[Function]}
        role="tab"
        tabIndex={-1}
      >
        标签页3
      </div>
      <div
        className="sc-bwzfXH fmPQiX sinoui-ink-bar"
        data-testid="inkbar"
      />
    </div>
  </div>
  <div
    className="sc-EHOje cDIvNs sinoui-tab-content"
  >
    <div
      className="sc-bZQynM jWIhci sinoui-tab-panel-list"
      style={
        Object {
          "transform": "translate3d(-0%, 0px, 0px)",
        }
      }
    >
      <div
        aria-hidden={false}
        className="sc-htoDjs ahPlL sinoui-tab-panel sinoui-tab-panel--active"
        data-testid="tab-panel-0"
        hidden={false}
        id="tab-3"
        role="tabpanel"
      >
        内容1
      </div>
      <div
        aria-hidden={true}
        className="sc-htoDjs fSyAZh sinoui-tab-panel"
        data-testid="tab-panel-1"
        hidden={true}
        id="tab-4"
        role="tabpanel"
      />
      <div
        aria-hidden={true}
        className="sc-htoDjs fSyAZh sinoui-tab-panel"
        data-testid="tab-panel-2"
        hidden={true}
        id="tab-5"
        role="tabpanel"
      />
    </div>
  </div>
</div>
`;

exports[`选中第二个标签页 1`] = `
<div
  className="sinoui-tab-group"
>
  <div
    className="sc-bdVaJa bHJEOW sinoui-tab-header"
    role="tablist"
  >
    <div
      className="sc-ifAKCX kZrSXT sinoui-tab-list"
    >
      <div
        aria-selected={false}
        className="sc-gzVnrw iKcqnw sinoui-tab"
        data-testid="tab-header-item-0"
        id="tab-6"
        onClick={[Function]}
        onKeyDown={[Function]}
        role="tab"
        tabIndex={-1}
      >
        标签页1
      </div>
      <div
        aria-selected={true}
        className="sc-gzVnrw gtremN sinoui-tab sinoui-tab--active"
        data-testid="tab-header-item-1"
        id="tab-7"
        onClick={[Function]}
        onKeyDown={[Function]}
        role="tab"
        tabIndex={0}
      >
        标签页2
      </div>
      <div
        aria-selected={false}
        className="sc-gzVnrw iKcqnw sinoui-tab"
        data-testid="tab-header-item-2"
        id="tab-8"
        onClick={[Function]}
        onKeyDown={[Function]}
        role="tab"
        tabIndex={-1}
      >
        标签页3
      </div>
      <div
        className="sc-bwzfXH fmPQiX sinoui-ink-bar"
        data-testid="inkbar"
      />
    </div>
  </div>
  <div
    className="sc-EHOje cDIvNs sinoui-tab-content"
  >
    <div
      className="sc-bZQynM jWIhci sinoui-tab-panel-list"
      style={
        Object {
          "transform": "translate3d(-100%, 0px, 0px)",
        }
      }
    >
      <div
        aria-hidden={true}
        className="sc-htoDjs fSyAZh sinoui-tab-panel"
        data-testid="tab-panel-0"
        hidden={true}
        id="tab-9"
        role="tabpanel"
      />
      <div
        aria-hidden={false}
        className="sc-htoDjs ahPlL sinoui-tab-panel sinoui-tab-panel--active"
        data-testid="tab-panel-1"
        hidden={false}
        id="tab-10"
        role="tabpanel"
      >
        内容2
      </div>
      <div
        aria-hidden={true}
        className="sc-htoDjs fSyAZh sinoui-tab-panel"
        data-testid="tab-panel-2"
        hidden={true}
        id="tab-11"
        role="tabpanel"
      />
    </div>
  </div>
</div>
`;

exports[`附加内容 1`] = `
<div
  className="sinoui-tab-group"
>
  <div
    className="sc-bdVaJa bHJEOW sinoui-tab-header"
    role="tablist"
  >
    <div
      className="sc-ifAKCX kZrSXT sinoui-tab-list"
    >
      <div
        aria-selected={true}
        className="sc-gzVnrw gtremN sinoui-tab sinoui-tab--active"
        data-testid="tab-header-item-0"
        id="tab-42"
        onClick={[Function]}
        onKeyDown={[Function]}
        role="tab"
        tabIndex={0}
      >
        标签页1
      </div>
      <div
        aria-selected={false}
        className="sc-gzVnrw iKcqnw sinoui-tab"
        data-testid="tab-header-item-1"
        id="tab-43"
        onClick={[Function]}
        onKeyDown={[Function]}
        role="tab"
        tabIndex={-1}
      >
        标签页2
      </div>
      <div
        aria-selected={false}
        className="sc-gzVnrw iKcqnw sinoui-tab"
        data-testid="tab-header-item-2"
        id="tab-44"
        onClick={[Function]}
        onKeyDown={[Function]}
        role="tab"
        tabIndex={-1}
      >
        标签页3
      </div>
      <div
        className="sc-bwzfXH fmPQiX sinoui-ink-bar"
        data-testid="inkbar"
      />
    </div>
    <div
      className="sc-bxivhb gavukR sinoui-tab-header__extra-content"
    >
      <div>
        附加内容
      </div>
    </div>
  </div>
  <div
    className="sc-EHOje cDIvNs sinoui-tab-content"
  >
    <div
      className="sc-bZQynM jWIhci sinoui-tab-panel-list"
      style={
        Object {
          "transform": "translate3d(-0%, 0px, 0px)",
        }
      }
    >
      <div
        aria-hidden={false}
        className="sc-htoDjs ahPlL sinoui-tab-panel sinoui-tab-panel--active"
        data-testid="tab-panel-0"
        hidden={false}
        id="tab-45"
        role="tabpanel"
      >
        内容1
      </div>
      <div
        aria-hidden={true}
        className="sc-htoDjs fSyAZh sinoui-tab-panel"
        data-testid="tab-panel-1"
        hidden={true}
        id="tab-46"
        role="tabpanel"
      />
      <div
        aria-hidden={true}
        className="sc-htoDjs fSyAZh sinoui-tab-panel"
        data-testid="tab-panel-2"
        hidden={true}
        id="tab-47"
        role="tabpanel"
      />
    </div>
  </div>
</div>
`;
